--- a/index.html
+++ b/index.html
@@ -1,54 +1,98 @@
-<!DOCTYPE html>
-<html lang="en">
+body {
+    /* font-family: Arial, sans-serif; */
+    font-family: system-ui;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f9;
+}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathQuest - Learn and Master Math</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+header {
+    background-color: #4CAF50;
+    color: white;
+    padding: 1rem 0;
+    text-align: center;
+}
 
-<body>
-    <header>
-        <h1>MathQuest</h1>
-        <p>Your Journey to Math Mastery Starts Here!</p>
-    </header>
+header h1 {
+    margin: 0;
+    font-size: 2.5rem;
+}
 
-    <nav>
-        <a href="#lessons">Lessons</a>
-        <a href="#practice">Practice</a>
-        <a href="#resources">Resources</a>
-        <a href="#about">About</a>
-    </nav>
+nav {
+    background-color: #333;
+    overflow: hidden;
+}
 
-    <div class="hero">
-        <h2>Unlock the Power of Mathematics</h2>
-        <p>Interactive lessons, adaptive exercises, and endless practice opportunities.</p>
-    </div>
+nav a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+    text-decoration: none;
+}
 
-    <div class="sections">
-        <div class="section" id="lessons">
-            <h3>Lessons</h3>
-            <p>Learn math step-by-step with clear explanations and examples.</p>
-            <a href="#">Start Learning</a>
-        </div>
+nav a:hover {
+    background-color: #575757;
+}
 
-        <div class="section" id="practice">
-            <h3>Practice</h3>
-            <p>Sharpen your skills with tailored problem sets and challenges.</p>
-            <a href="#">Start Practicing</a>
-        </div>
+.hero {
+    text-align: center;
+    padding: 2rem;
+    background: url('https: //via.placeholder.com/1500x500') no-repeat center center/cover;
+    background-size: 100%;
+    color: black;
+}
 
-        <div class="section" id="resources">
-            <h3>Resources</h3>
-            <p>Access curated books, articles, and videos to boost your learning.</p>
-            <a href="#">Explore Resources</a>
-        </div>
-    </div>
+.hero h2 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
 
-    <footer>
-        <p>&copy; 2025 MathQuest. All Rights Reserved.</p>
-    </footer>
-</body>
+.sections {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 2rem;
+}
 
-</html>
+.section {
+    background-color: white;
+    margin: 1rem;
+    padding: 1.5rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    width: 300px;
+    text-align: center;
+}
+
+.section h3 {
+    margin-bottom: 1rem;
+}
+
+.section p {
+    margin-bottom: 1rem;
+    color: #555;
+}
+
+.section a {
+    text-decoration: none;
+    color: #4CAF50;
+    font-weight: bold;
+}
+
+h1 {
+    font-family: "Cousine", serif;
+    font-weight: 700;
+    font-style: normal;
+    color: #333;
+
+}
+
+footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #333;
+    color: white;
+    margin-top: 2rem;
+}
