--- a/index.html
+++ b/index.html
@@ -6,23 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KOKO - Learn</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cousine:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <h1>KOKO</h1>
-        <p>Your Journey to Math Mastery Starts Here!</p>
-    </header>
-
     <nav>
         <a href="#lessons">Lessons</a>
         <a href="#practice">Practice</a>
         <a href="#resources">Resources</a>
         <a href="#about">About</a>
     </nav>
+
+    <header>
+        <h1>KOKO</h1>
+        <p>Your Journey to Math Mastery Starts Here!</p>
+    </header>
 
     <div class="hero">
         <h2>Unlock the Power of Mathematics</h2>
@@ -56,7 +53,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 MathQuest. All Rights Reserved.</p>
+        <p>&copy; 2025 KOKO. All Rights Reserved.</p>
     </footer>
 </body>
 
