--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body>
     <nav>
-        <a href="#lessons">Lessons</a>
-        <a href="#practice">Practice</a>
-        <a href="#resources">Resources</a>
-        <a href="#about">About</a>
+        <a href="index.html">Home</a>
+        <a href="navigation/lessons.html">Lessons</a>
+        <a href="navigation/practice.html">Practice</a>
+        <a href="navigation/resources.html">Resources</a>
+        <a href="navigation/about.html">About</a>
     </nav>
 
     <header>
@@ -30,25 +31,25 @@
         <div class="section" id="lessons">
             <h3>Lessons</h3>
             <p>Learn math step-by-step with clear explanations and examples.</p>
-            <a href="#">Start Learning</a>
+            <a href="navigation/lessons.html">Start Learning</a>
         </div>
 
         <div class="section" id="practice">
             <h3>Practice</h3>
             <p>Sharpen your skills with tailored problem sets and challenges.</p>
-            <a href="#">Start Practicing</a>
+            <a href="navigation/practice.html">Start Practicing</a>
         </div>
 
         <div class="section" id="resources">
             <h3>Resources</h3>
             <p>Access curated books, articles, and videos to boost your learning.</p>
-            <a href="#">Explore Resources</a>
+            <a href="navigation/resources.html">Explore Resources</a>
         </div>
 
         <div class="section" id="about">
             <h3>About</h3>
             <p>We want to you learn math</p>
-            <a href="#">Extend</a>
+            <a href="navigation/about.html">Extend</a>
         </div>
     </div>
 
