--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 </head>
 
 <body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="navigation/lessons.html">Lessons</a>
-        <a href="navigation/practice.html">Practice</a>
-        <a href="navigation/resources.html">Resources</a>
-        <a href="navigation/about.html">About</a>
-    </nav>
-
     <header>
+        <nav>
+            <div><strong>KOKO</strong></div>
+            <div>
+                <a href="index.html">Home</a>
+                <a href="navigation/lessons.html">Lessons</a>
+                <a href="navigation/practice.html">Practice</a>
+                <a href="navigation/resources.html">Resources</a>
+                <a href="navigation/about.html">About</a>
+            </div>
+        </nav>
+    </header>
+    <div class="crok">
         <h1>KOKO</h1>
         <p>Your Journey to Math Mastery Starts Here!</p>
-    </header>
+    </div>
 
     <div class="hero">
         <h2>Unlock the Power of Mathematics</h2>
