--- a/navigation/about.html
+++ b/navigation/about.html
@@ -5,20 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="aboutstyle.css">
 </head>
 
 <body>
-    <nav>
+    <header>
+        <nav>
+        <div><strong>KOKO</strong></div>
+        <div>
         <a href="../index.html">Home</a>
         <a href="lessons.html">Lessons</a>
         <a href="practice.html">Practice</a>
         <a href="resources.html">Resources</a>
         <a href="about.html">About</a>
+        </div>
     </nav>
-    <p>My name is Kanimet</p>
-    this is my site for math learners and enjoyers
+    </header>
+    <main>
+        <section class="ab">
+            <h2>About KOKO</h2>
+            <p>KOKO is a free platform designed to help students, especially Olympiad learners, improve their math
+                skills with hand-picked resources and tools.</p>
+        </section>
 
+        <section class="ab">
+            <h2>About Me</h2>
+            <p>Hi! I'm Kanimet, a math Olympiad student passionate about education and problem-solving. I created this
+                site to share useful tools and lessons with students like me.</p>
+        </section>
+
+        <section class="ab">
+            <h2>Connect With Me</h2>
+            <ul>
+                <li><a class="social-link" href="mailto:kanimet.busurmankulovv@email.com" target="_blank">Email</a></li>
+                <li><a class="social-link" href="https://www.instagram.com/kanimet_b/" target="_blank">Instagram</a></li>
+                <li><a class="social-link" href="https://t.me/kanimetb" target="_blank">Telegram</a></li>
+                <li><a class="social-link" href="https://github.com/Kanimet0" target="_blank">GitHub</a></li>
+            </ul>
+        </section>
+    </main>
 </body>
 
 </html>
