--- a/navigation/practice.html
+++ b/navigation/practice.html
@@ -5,17 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="navstyle.css">
 </head>
 
 <body>
-    <nav><a href="../index.html">Home</a>
-        <a href="lessons.html">Lessons</a>
-        <a href="practice.html">Practice</a>
-        <a href="resources.html">Resources</a>
-        <a href="about.html">About</a>
-    </nav>
-    <p>this is practice part</p>
+    <header>
+        <nav>
+            <div><strong>KOKO</strong></div>
+            <div>
+                <a href="../index.html">Home</a>
+                <a href="lessons.html">Lessons</a>
+                <a href="practice.html">Practice</a>
+                <a href="resources.html">Resources</a>
+                <a href="about.html">About</a>
+            </div>
+        </nav>
+    </header>
+    <p>practice practice practice</p>
 </body>
 
 </html>
