--- a/navigation/resources.html
+++ b/navigation/resources.html
@@ -9,13 +9,19 @@
 </head>
 
 <body>
-    <nav><a href="../index.html">Home</a>
-        <a href="lessons.html">Lessons</a>
-        <a href="practice.html">Practice</a>
-        <a href="resources.html">Resources</a>
-        <a href="about.html">About</a>
-    </nav>
     <header>
+        <nav>
+            <div><strong>KOKO</strong></div>
+            <div>
+                <a href="../index.html">Home</a>
+                <a href="lessons.html">Lessons</a>
+                <a href="practice.html">Practice</a>
+                <a href="resources.html">Resources</a>
+                <a href="about.html">About</a>
+            </div>
+        </nav>
+    </header>
+    <div class="kreak">
         <h1>Math Resources</h1>
         <input type="text" id="search" placeholder="Search resources...">
         <div class="shortcut">
@@ -26,7 +32,7 @@
                 <li><a href="#other">Other Resources</a></li>
             </ul>
         </div>
-    </header>
+    </div>
 
 
     <main>
